# rmixer

./: Cargo.toml  LICENSE  Makefile  README.md  config.example.yaml
.github/: copilot-instructions.md
.github/workflows/: release.yml
src/: config.rs  ipc.rs  main.rs
src/audio/: engine.rs  mod.rs
src/ui/: app.rs  mod.rs
src/ui/widgets/: channel_strip.rs  meter.rs  mod.rs
