[package]
name = "rmixer"
version = "0.1.0"
edition = "2021"

[dependencies]
jack = "0.13"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rtrb = "0.3"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
